replaced colors with image library for use with manifests

--- a/src/main.less
+++ b/src/main.less
@@ -3,7 +3,7 @@
 
 @import "application/styles";
 @import "books/styles";
-@import "colors/styles";
+@import "images/styles";
 @import "flashes/styles";
 @import "header/styles";
 @import "index/styles";
